# SQL

./: CMakeLists.txt  main.cpp
DTOs/: ChangePasswordDTO.hpp  CreateUserDTO.hpp  UserDTO.hpp  UserSessionDTO.hpp
Database/: DataTable.cpp  DataTable.hpp  SQL.cpp  SQL.hpp
GraphQL/Adapters/: ItemWrapper.cpp  ItemWrapper.hpp
GraphQL/Resolvers/: ItemQueryResolver.hpp  ItemResolver.hpp  QueryResolver.hpp  RootMutationResolver.hpp  RootQueryResolver.hpp  SchemaRequest.hpp
GraphQL/Resolvers/UserResolvers/: AuthResolver.hpp  UserMutationResolver.hpp  UserPublicResolver.hpp  UserQueryResolver.hpp  UserResolver.hpp
GraphQL/Schemas/: Chat.graphql  Contact.graphql  Item.graphql  User.graphql
Interfaces/: IBaseRepository.hpp  IItemRepository.hpp  IItems.hpp  ISQL.hpp  IUserRepository.hpp  SQLConfig.hpp
Models/: AuthPayloadModel.hpp  Item.cpp  Item.hpp  ItemModel.hpp  UserModel.hpp  UserPublicModel.hpp
Models/User/: User.cpp  User.hpp
Repositories/: ItemRepository.cpp  ItemRepository.hpp
Repositories/User/: UserRepository.cpp  UserRepository.hpp
SQLFiles/: Tables.sql
Services/: ItemService.cpp  ItemService.hpp
Services/User/: UserService.cpp  UserService.hpp
Utils/: Base64.cpp  Base64.hpp  Hasher.cpp  Hasher.hpp  JWT.cpp  JWT.hpp
include/DataTable/: DataTable.cpp  DataTable.hpp
include/Dataset/: Dataset.cpp  Dataset.hpp
include/GlobalEnvironment/: GlobalEnvironment.cpp  GlobalEnvironment.hpp
include/SQL/: SQL.cpp  SQL.hpp
